# Anchor

./: .gitignore  ARCHITECTURE_FLOW.md  CLAUDE.md  PLAN.md  README.md  start.sh  stop.sh
backend/: .env.example  .gitignore  config.py  main.py  pyproject.toml  test_full_reel.py  test_reel_generation.py  worker.py  worker_optimized.py
backend/routers/: __init__.py  events.py  reels.py  shopify.py  videos.py
backend/services/: __init__.py  audio_sync.py  encryption.py  gemini_service.py  music_sync.py  overlay.py  redis_client.py  render.py  s3_client.py  shopify_sync.py  subtle_placement_service.py  supabase_client.py  timeline.py  twelvelabs_service.py  veo_service.py  vertex_video_inpaint.py  video_compress.py  video_utils.py
backend/tests/: __init__.py  conftest.py  test_events.py  test_integration.py  test_reels.py  test_shopify.py  test_videos.py
backend/tests/services/: test_encryption.py  test_music_sync.py  test_timeline.py  test_twelvelabs_service.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout-client.tsx  layout.tsx  page.tsx
frontend/components/: AnalysisProgress.tsx  BotNav.tsx  BrandStoreBrowser.tsx  GenerationProgress.tsx  Hero.tsx  MusicUpload.tsx  PersonalReelGenerator.tsx  PrimaryCreate.tsx  ProcessingLogs.tsx  ProductSelector.tsx  ShopifyConnect.tsx  TopNav.tsx  VideoPlayer.tsx  VideoUpload.tsx
frontend/lib/: api.ts  supabase.ts
supabase/: config.toml  schema.sql
supabase/migrations/: 20260117000000_base_schema.sql  20260117000002_disable_rls.sql  20260117_001_shopify_stores.sql  (+2 more)
(+13 files in other folders)
