[project]
name = "anchor-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.30",
    "celery[redis]>=5.6.2",
    "cryptography>=46.0.3",
    "fastapi>=0.128.0",
    "ffmpeg-python>=0.2.0",
    "google-genai>=1.59.0",
    "httpx>=0.28.1",
    "librosa>=0.11.0",
    "python-multipart>=0.0.21",
    "scipy>=1.17.0",
    "supabase>=2.27.2",
    "twelvelabs>=1.1.0",
    "uvicorn>=0.40.0",
]
